--- a/employee-info/package.json
+++ b/employee-info/package.json
@@ -2,7 +2,7 @@
   "name": "employee-info",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://loganpippin.github.io",
+  "homepage": "https://loganpippin.github.io/14-React-Employee/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
